--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start",
     "https": "next dev --experimental-https",
@@ -30,7 +30,7 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "15.2.3",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
     "posthog-js": "^1.223.4",
@@ -53,8 +53,8 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.1.7",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
